# palatine-hill

./: .clangd  .env.example.json  .gitignore  CMakeLists.txt  Dockerfile  README.md  createbundle.sh  docker-compose.yml  sftp.sh
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  prerender.js  tsconfig.json  vite.config.ts
frontend/public/: style.css
frontend/src/: 404.tsx  FAQ.tsx  dashboard.tsx  homepage.tsx  main-client.ts  main.tsx  nickname.tsx  pitch.tsx  setup.tsx  voting.tsx
migrations/: init.sql  nicknames.sql  votes.sql
src/: CMakeLists.txt  api.h  component.h  curlutil.cpp  curlutil.h  dbclient.cpp  dbclient.h  env.h  error.cpp  error.h  main.cpp  slack.h  static.h
